# quicktle

./: CMakeLists.txt  CPackConfig.cmake  Changelog  Doxyfile  Makefile  README  README.md
include/: dataset.h  func.h  node.h  stream.h  tlelib.h
include/quicktle/: dataset.h  func.h  node.h  stream.h
include/tlelib/: tledataset.cpp  tledataset.h  tleexception.h  tlefunc.cpp  tlefunc.h  tlelib.h  tlenode.cpp  tlenode.h  tlestream.cpp  tlestream.h
samples/: Makefile
samples/sample1/: CMakeLists.txt  main.cpp
samples/sample2/: CMakeLists.txt  main.cpp
samples/sample3/: CMakeLists.txt  main.cpp  mir.tle  stations.tle
samples/sample4/: CMakeLists.txt  main.cpp
src/: dataset.cpp  func.cpp  node.cpp  stream.cpp
test/: CMakeLists.txt  main.cpp  test_dataset.h  test_func.h  test_node.h  test_stream.h  test_tlefunc.h  test_tlenode.h  test_tlestream.h
